objects/LLC_BI__Address__c.object
<CustomObject>
    <description>This lookup object captures address information that does not exist on the standard Contact object, such as previous addresses.</description>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user populates this lookup field to indicate the account record to which an address record refers. By default, this field is blank.</description>
        <inlineHelpText>Enter the account record to which this address refers.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__City__c</fullName>
        <description>The user populates this text field to document the borrower’s city. By default, this field is blank.</description>
        <inlineHelpText>Enter the city in this field.</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user populates this lookup field to indicate the contact record to which an address record refers. By default, this field is blank.</description>
        <inlineHelpText>Enter the contact record to which this address refers.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Country__c</fullName>
        <description>The user populates this text field to document the borrower’s country. By default, this field is blank.</description>
        <inlineHelpText>Enter the country in this field.</inlineHelpText>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Current__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is selected to indicate the applicant’s address is their current address information. By default, this field is deselected.</description>
        <inlineHelpText>Select this checkbox to indicate the applicant’s address is current.</inlineHelpText>
        <label>Is Current Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Monthly_Housing_Expense__c</fullName>
        <description>This currency field is populated with the applicant’s current monthly housing payment. By default, this field is blank.</description>
        <inlineHelpText>This field contains the applicant’s current housing payment.</inlineHelpText>
        <label>Monthly Housing Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Months_At_Residence__c</fullName>
        <description>This number field is populated to indicate the applicant’s total number of months at their current residence. By default, this field is blank.</description>
        <inlineHelpText>This field displays the applicant’s total number of months at their current residence.</inlineHelpText>
        <label>Months at Residence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Postal_Code__c</fullName>
        <description>The user populates this text field to document the borrower’s postal code. By default, this field is blank.</description>
        <inlineHelpText>Enter the postal code in this field.</inlineHelpText>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Residence_Type__c</fullName>
        <description>This picklist is populated to indicate the applicant&apos;s ownership status of their current residence. By default, this field is blank.</description>
        <inlineHelpText>This field indicates the applicant&apos;s ownership status of their current residence.</inlineHelpText>
        <label>Residence Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home Owner</fullName>
                </value>
                <value>
                    <fullName>Home Buyer</fullName>
                </value>
                <value>
                    <fullName>Lives with relatives or others</fullName>
                </value>
                <value>
                    <fullName>Renter</fullName>
                </value>
                <value>
                    <fullName>Home Owner (Mobile Home)</fullName>
                </value>
                <value>
                    <fullName>Home Buyer (Mobile Home)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__State__c</fullName>
        <description>The user populates this text field to document the borrower’s state. By default, this field is blank.</description>
        <inlineHelpText>Enter the state in this field.</inlineHelpText>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Street__c</fullName>
        <description>The user populates this text field to document the borrower’s street address. By default, this field is blank.</description>
        <inlineHelpText>Enter the street address in this field.</inlineHelpText>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Type__c</fullName>
        <description>The user populates this picklist field to indicate the type of address for the contact record. By default, this field is blank.</description>
        <inlineHelpText>Select the type of address from the picklist.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mailing</fullName>
                </value>
                <value>
                    <fullName>Physical</fullName>
                </value>
                <value>
                    <fullName>PO Box</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Address</label>
    <nameField>
        <label>Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>